{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 276,
  "lineage": "6e4b6b7a-1501-babc-40ef-869f2edca08b",
  "resources": [
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.instances-provisioner",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-074a2642e2a3737d2",
            "arn": "arn:aws:ec2:eu-central-1:774145483743:instance/i-05545601433d914d6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05545601433d914d6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair-apache-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2fef197ef60d5c9",
            "private_dns": "ip-10-0-101-48.eu-central-1.compute.internal",
            "private_ip": "10.0.101.48",
            "public_ip": "18.197.105.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04e154736285e4b2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e85fbf7f50c03ff7",
            "tags": {
              "Application": "apache",
              "Environmnent": "dev",
              "Name": "apache-dev-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b81181bcefa8726",
              "sg-0fe73992adf65087d"
            ]
          },
          "dependencies": [
            "module.instances-provisioner.aws_key_pair.mykeypair",
            "module.instances-provisioner.aws_security_group.allow-ssh",
            "module.instances-provisioner.aws_security_group.apache",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:internet-gateway/igw-05472c7e7bf9be8a4",
            "id": "igw-05472c7e7bf9be8a4",
            "owner_id": "774145483743",
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05472c7e7bf9be8a4",
            "id": "r-rtb-0301e948ca6a9f1741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0301e948ca6a9f174",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_internet_gateway.this",
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0804b86f2111bfff3",
            "owner_id": "774145483743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0986c7f2ae0e18d35",
            "owner_id": "774145483743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08c7b27527bf87d27",
            "owner_id": "774145483743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev-private-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0301e948ca6a9f174",
            "owner_id": "774145483743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd1dbe7bd3ffadca",
            "route_table_id": "rtb-0804b86f2111bfff3",
            "subnet_id": "subnet-0689d22caf5b35a16"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0421a518f688bb0e1",
            "route_table_id": "rtb-0986c7f2ae0e18d35",
            "subnet_id": "subnet-040e047b2d5b53785"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0035dc7804d949dc4",
            "route_table_id": "rtb-08c7b27527bf87d27",
            "subnet_id": "subnet-0adb16c744f96b9b2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d29fc70616a4ee99",
            "route_table_id": "rtb-0301e948ca6a9f174",
            "subnet_id": "subnet-0e85fbf7f50c03ff7"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bbea8851cc2545a",
            "route_table_id": "rtb-0301e948ca6a9f174",
            "subnet_id": "subnet-07ae49ec59ae2730b"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2fe6dbe25fd97af",
            "route_table_id": "rtb-0301e948ca6a9f174",
            "subnet_id": "subnet-092b6ca7ef078ad2e"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.instances-provisioner",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:security-group/sg-07b81181bcefa8726",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b81181bcefa8726",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-dev",
            "name_prefix": null,
            "owner_id": "774145483743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environmnent": "dev",
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.instances-provisioner",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:security-group/sg-0fe73992adf65087d",
            "description": "security group that allows web traffic for apache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe73992adf65087d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apache-dev",
            "name_prefix": null,
            "owner_id": "774145483743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environmnent": "dev",
              "Name": "apache"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-0689d22caf5b35a16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0689d22caf5b35a16",
            "map_public_ip_on_launch": false,
            "owner_id": "774145483743",
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-040e047b2d5b53785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-040e047b2d5b53785",
            "map_public_ip_on_launch": false,
            "owner_id": "774145483743",
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-0adb16c744f96b9b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0adb16c744f96b9b2",
            "map_public_ip_on_launch": false,
            "owner_id": "774145483743",
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev-private-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-0e85fbf7f50c03ff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0e85fbf7f50c03ff7",
            "map_public_ip_on_launch": true,
            "owner_id": "774145483743",
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev-public-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-07ae49ec59ae2730b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-07ae49ec59ae2730b",
            "map_public_ip_on_launch": true,
            "owner_id": "774145483743",
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev-public-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-092b6ca7ef078ad2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-092b6ca7ef078ad2e",
            "map_public_ip_on_launch": true,
            "owner_id": "774145483743",
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev-public-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077b6c375126a01e5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:vpc/vpc-077b6c375126a01e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff575762eb232ac5",
            "default_route_table_id": "rtb-07578302a328c4378",
            "default_security_group_id": "sg-0e163108d7749efb9",
            "dhcp_options_id": "dopt-3b11ca51",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-077b6c375126a01e5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07578302a328c4378",
            "owner_id": "774145483743",
            "tags": {
              "Application": "apache",
              "Environment": "dev",
              "Name": "vpc-apache-dev",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "access_analyzer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "acm_pca",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "auto_scaling_plans",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "datasync",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ebs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_autoscaling",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elastic_inference_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk_health",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "emr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "qldb_session",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ses",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "states",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "workspaces",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}